[package]
name = "cli-modbus-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.2.2"
crossterm = "0.29.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-modbus = "0.17.0"